feat: privilege guard
